# gengo

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.rst  autogen.sh  bump-version.sh  configure.ac  gengo
data/: Makefile.am  gengo.desktop.in  window.ui
ggo/: defs.py.in  gengo.py  licenses.py  templates.py  utils.py  window.py
po/: POTFILES.in
